<resources>
    <string name="app_name">Mach Infinity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Register">Register</string>
    <string name="signup">SIGN UP WITH GOOGLE</string>
    <string name="create">Create</string>
    <string name="Policy">By creating an account, you agree to our Terms of Service and Policy Policy </string>
    <string name="mach">MACH INFINITY</string>
    <string name="username">Username</string>
    <string name="newuser">New User?</string>
    <string name="title_activity_blank">Sign in</string>
    <!-- Strings related to Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="SignUp">Sign Up</string>
    <string name="address">Address</string>
    <string name="welcome">WELCOME !!!</string>
    <string name="newbie">newbie</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="already">....... Already Existing User .......</string>
    <string-array name="genders">
        <item> ... Select Gender ...</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to answer</item>
    </string-array>

</resources>
