<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@drawable/backdown"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_weight="1"
    >

 <de.hdodenhof.circleimageview.CircleImageView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/profile_image"
     android:layout_width="100dp"
     android:layout_height="150dp"
     android:layout_centerInParent="true"
     android:src="@drawable/user"
     app:civ_border_color="@color/white"
     app:civ_border_width="3dp"
    android:layout_gravity="center"
     />

 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
    android:hint="@string/username"
     android:textColorHint="@color/white"
     android:textSize="25sp"
     android:layout_marginTop="70dp"
     android:textColor="@color/white"
     android:background="@drawable/bord2"
     android:layout_gravity="center"
      />


 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/password"
     android:textColorHint="@color/white"
     android:textSize="25sp"
     android:textColor="@color/white"
     android:background="@drawable/bord2"
     android:layout_marginTop="10dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_gravity="center"
    android:gravity="center">
 <Button
     android:id="@+id/signin"
     android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:text="@string/action_sign_in_short"
     android:textSize="25sp"
     android:background="@drawable/txtbord"/>
</LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
   android:gravity="center"
     android:layout_weight="1">
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/newuser"
      android:textColor="@color/white"
      android:textSize="25sp"
     />
  <Button
      android:id="@+id/register"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:text="@string/Register"
      android:textSize="25sp"
      android:background="@drawable/txtbord"
      android:layout_marginLeft="20dp"
     />
 </LinearLayout>

</LinearLayout>

